# python-project-49

./: .flake8  README.md  demo.cast  makefile  pyproject.toml
.github/workflows/: main.yml
brain_games/: engine.py
brain_games/games/: calc.py  even.py  gcd.py  prime.py  progression.py
brain_games/scripts/: brain_calc.py  brain_even.py  brain_game.py  brain_games.py  brain_gcd.py  brain_prime  brain_prime.py  brain_progression.py
